Added documentation to grapha-data